--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "iNoteBook - Your notebook on the cloud ",
   "main": "index.js",
   "scripts": {
+    "dev": "node index.js",
     "start": "node index.js"
   },
   "author": "",
